--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/HOM-KLIN-NGERN
 excludes=
 file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\User\\Desktop\\sql\\mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-j-8.0.31.jar-1=/Users/sa/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-j-8.0.31.jar-2=mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.31.jar}:\
-    ${file.reference.mysql-connector-j-8.0.31.jar-1}
+    ${file.reference.mysql-connector-j-8.0.31.jar-1}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
