--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=HOM-KLIN-NGERN
+application.vendor=User
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/HOM-KLIN-NGERN.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/HOM-KLIN-NGERN
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\User\\Desktop\\sql\\mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-j-8.0.31.jar-1=/Users/sa/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31.jar
